<resources>
    <string name="app_name" translatable="false">DriveAndLog</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Log in</string>
    <!-- Strings related to login -->
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_map_page">Map</string>
    <string name="onpause_text">Your app is paused</string>
    <string name="button">Button</string>
    <string name="todo">TODO</string>
    <string name="email" translatable="false">email</string>
    <string name="name">Name</string>
    <string name="choose">Choose</string>

    <string name="title_activity_list">List</string>
    <string name="action_sort">sort</string>
    <string name="action_add">add</string>

    <string name="register_button">Not a user? Register here</string>
    <string name="end_trip">End Trip</string>
    <string name="start_trip">Start Trip</string>
    <string name="logsbutton" translatable="false">logsButton</string>
    <string name="profilebutton" translatable="false">profileButton</string>
    <string name="mapsbutton" translatable="false">mapsButton</string>
    <string name="trip_s_over" translatable="false">Trip\'s over!</string>
    <string name="distance_string" translatable="false">adasdw</string>

    <string name="select_user" translatable="false">Select a user</string>
    <string name="profile" translatable="false">profile</string>
    <string name="Log" translatable="false">Log</string>
    <string name="Map" translatable="false">Map</string>
    <string name="create_account" translatable="false">Create Account</string>
    <string name="already_a_member_login" translatable="false">Already a member? Login</string>
    <string name="password" translatable="false">Password</string>
    <string name="email_create" translatable="false">Email</string>
    <string name="name_create" translatable="false">Name</string>
    <string name="logo" translatable="false">logo</string>
    <string name="title_activity_create__log" translatable="false">Create_Log</string>
    <string name="Switch" translatable="false">Switch</string>
    <string name="roadtrip_eu" translatable="false">Roadtrip eu</string>
    <string name="dune" translatable="false">Dune</string>
    <string name="mathias" translatable="false">Mathias</string>
    <string name="_32_km_64" translatable="false">32 km, 64%</string>
    <string name="_20_kr" translatable="false">20 kr</string>
    <string name="_10_km_20" translatable="false">10 km, 20%</string>
    <string name="_8_km_16" translatable="false">8 km, 16%</string>
    <string name="_4_kr" translatable="false">4 kr</string>
    <string name="_6_kr" translatable="false">6 kr</string>
    <string name="benzin_price_9_9_kr_l" translatable="false">Benzin price 9.9 kr/L</string>
    <string name="firat" translatable="false">Firat</string>
    <string name="login" translatable="false">Login</string>
    <string name="create_an_account" translatable="false">Create an account?</string>


</resources>
